fix(style): wrong margin for notice box

--- a/app/assets/stylesheets/_aurora_migration.scss
+++ b/app/assets/stylesheets/_aurora_migration.scss
@@ -198,6 +198,7 @@
   width: 100%;
   background: #f4edff;
   box-sizing: border-box;
+  margin-top: 2rem;
 }
 
 .switcher-notice--big {
